@@ -1,3 +1,7 @@
+Sun Jan 17 19:24:25 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* math.c (domain_check): check errno first.
+
 Sat Jan 16 07:17:15 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>
 
 	* ext/zlib/zlib.c: backport r18029 and r21861 from trunk.
